# romea-robot-to-world-localisation-core

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_robot_to_world_localisation.repos  romea_robot_to_world_localisation.rosinstall  romea_robot_to_world_localisation_core.repos
config/: core.yaml  indoor_outdoor.yaml
include/romea_robot_to_world_localisation/: robot_to_world_localisation.hpp  robot_to_world_localisation_filter.hpp  robot_to_world_localisation_recorder.hpp  visibility_control.h
include/romea_robot_to_world_localisation_core/: robot_to_world_and_robot_to_robot_localisation.hpp  robot_to_world_localisation.hpp  robot_to_world_localisation_filter.hpp  visibility_control.h
launch/: indoor_outdoor_localisation.launch.py  outdoor_localisation.launch.py  robot_to_world_and_robot_to_robot_localisation.launch.py  robot_to_world_localisation.launch.py
scripts/: gazebo_comparison.py  gazebot_robot_to_world_localisation.py
src/: robot_to_world_and_robot_to_robot_kalman_localisation_node.cpp  robot_to_world_and_robot_to_robot_localisation.cpp  robot_to_world_and_robot_to_robot_particle_localisation_node.cpp  robot_to_world_kalman_localisation_node.cpp  robot_to_world_localisation.cpp  robot_to_world_localisation_recorder_node.cpp  robot_to_world_particle_localisation_node.cpp
