<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>romea_robot_to_world_localisation</name>
  <version>0.0.0</version>
  <description>Package romea_robot_to_world_localisation description</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>class_loader</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>romea_core_common</depend>
  <depend>romea_core_localisation</depend>
  <depend>romea_common_utils</depend>
  <depend>romea_localisation_msgs</depend>
  <depend>romea_localisation_utils</depend>

  <!-- <exec_depend>romea_localisation_gps</exec_depend>
  <exec_depend>romea_localisation_imu</exec_depend>
  <exec_depend>romea_localisation_odo</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>